# property-shared

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LAUNCHGUIDE.md  README.md  USER_GUIDE.md  fly.toml  pyproject.toml  server.json
.agents/skills/: README.md
.agents/skills/property-report/: SKILL.md
.agents/skills/property-search/: SKILL.md
.claude/rules/: property-app.md
.claude/skills/create-mcp-app/: SKILL.md
.github/workflows/: property_alert.yml
app/: main.py
app/api/v1/: epc.py
app/core/: metrics.py
app/schemas/: epc.py
mcp_server/: server.py
property_app/: CLAUDE.md  server.py  tools.py
property_app/dashboards/: rental.py  unified.py  yield_view.py
property_cli/: main.py
property_core/: ppd_service.py  rightmove_location.py
property_core/models/: companies_house.py  epc.py  ppd.py  rightmove.py
sai-freshdesk-copilot/: manifest.json
sai-freshdesk-copilot/app/: index.html
sai-freshdesk-copilot/app/scripts/: app.js
sai-freshdesk-copilot/app/styles/: app.css
sai-freshdesk-copilot/config/: iparams.json
scripts/: property_alert.py
tests/: test_app_rental.py  test_app_tools.py  test_app_unified.py  test_app_yield.py  test_epc_service_live.py  test_ppd_subject_property.py
