[project]
name = "property-shared"
version = "1.7.2"
description = "UK property data MCP server and API — Land Registry comparable sales, Rightmove listings, EPC certificates, rental analysis, and stamp duty."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "claude",
    "uk",
    "uk-property",
    "land-registry",
    "rightmove",
    "epc",
    "property-data",
    "rental-yield",
    "buy-to-let",
    "property-investment",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "httpx==0.28.1",
  "requests==2.32.5",
  "tenacity==9.1.2",
  "beautifulsoup4==4.14.3",
  "jinja2==3.1.6",
]

[project.optional-dependencies]
planning = [
  "playwright>=1.57.0",
  "openai>=1.83.0,<2",
]
dev = [
  "pytest>=9.0.2",
  "python-dotenv>=1.0.1",
  "openapi-python-client>=0.28.1",
]
api = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "prometheus-client==0.24.1",
]
cli = [
  "typer>=0.9.0",
  "rich>=13.9.0",
]
demo = [
  "python-multipart>=0.0.9",
]
apps = [
  "fastmcp[apps]==3.2.4",
  "prefab-ui==0.19.0",
]

[project.scripts]
property-api = "app.main:run"
property-cli = "property_cli.main:app"
property-app = "property_app.server:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["property_core", "app", "property_cli", "property_app"]
include = ["app/web/templates/**", "app/templates/**"]

[tool.hatch.build.targets.sdist]
exclude = [".uv-cache", ".venv", "*.pyc", "__pycache__", ".pytest_cache", ".git", "mcp_server/mcp-app/node_modules/**"]

[tool.pytest.ini_options]
addopts = "-ra"
